tests/fixtures/negative/skp1-unsupported-cipher.hex
534b50310102010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
